# microservice-fastapi-example

./: README.md  docker-compose.yml  pyproject.toml
api-gateway/: Dockerfile  keyclockclient.py  main.py  requirements.txt
auth-service/: Dockerfile  keyclockclient.py  main.py  requirements.txt
email-service/: Dockerfile  keyclockclient.py  main.py
grafana/: jaeger.json  promtheus.json
order-service/: Dockerfile  keyclockclient.py  main.py
product-service/: Dockerfile  keyclockclient.py  main.py
prometheus/: prometheus.yml
realms/: microservice-ecommerce-realm.json
